# KevinbotV3-DesktopClient

./: .coveragerc  .gitignore  README.md  constants.py  enums.py  main.py  pyproject.toml  reqs_dev.txt  requirements.txt  test.py  virtual_controller.py
.github/workflows/: coverage.yml
components/: __init__.py  controllers.py  ping.py  uuid_manager.py  xbee.py
src/desktopclient/: constants.py  enums.py  main.py
src/desktopclient/components/: __init__.py  controllers.py  dataplot.py  ping.py  xbee.py
src/desktopclient/ui/: cpick.py  plots.py
src/kevinbot_desktopclient/: constants.py  main.py  test.py  virtual_controller.py
src/kevinbot_desktopclient/components/: __init__.py  controllers.py  dataplot.py  ping.py  uuid_manager.py  xbee.py
src/kevinbot_desktopclient/ui/: cpick.py  delegates.py  mjpeg.py  plots.py  util.py  widgets.py
tests/: test_delegates.py  test_main_window.py  test_plots.py  test_utils.py  test_uuid_manager.py  test_widgets.py
ui/: cpick.py  delegates.py  mjpeg.py  plots.py  util.py  widgets.py
